--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
-        "pusher/pusher-php-server": "^7.2"
+        "pusher/pusher-php-server": "^7.2",
+        "watheqalshowaiter/filament-sticky-table-header": "^1.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.14",
