--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,14 @@
         "filament/filament": "^3.2",
         "guava/tutorials": "^1.1",
         "guzzlehttp/guzzle": "^7.2",
+        "joaopaulolndev/filament-pdf-viewer": "^1.1",
         "laravel/framework": "^10.10",
         "laravel/reverb": "^1.6",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
         "pusher/pusher-php-server": "^7.2",
+        "spatie/laravel-pdf": "^1.9",
         "watheqalshowaiter/filament-sticky-table-header": "^1.3"
     },
     "require-dev": {
