--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "pusher-js": "^8.4.0",
     "tailwindcss": "^3.4.18",
     "vite": "^5.0.0"
+  },
+  "dependencies": {
+    "puppeteer": "^24.36.1"
   }
 }
